--- a/app/src/main/res/layout/activity_module_setup.xml
+++ b/app/src/main/res/layout/activity_module_setup.xml
@@ -23,7 +23,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
-            android:layout_width="205dp"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:orientation="vertical"
             android:paddingTop="30dp"
@@ -31,6 +31,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/backButton">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:paddingLeft="7dp"
+                android:text="Choose an interaction mode:"
+                android:textSize="20sp" />
 
             <Spinner
                 android:id="@+id/spinner"
