--- a/app/src/main/res/layout/activity_module_setup.xml
+++ b/app/src/main/res/layout/activity_module_setup.xml
@@ -13,12 +13,12 @@
         tools:layout_editor_absoluteX="89dp"
         tools:layout_editor_absoluteY="108dp">
 
-        <Button
+        <ImageView
             android:id="@+id/backButton"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="BACK"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_back"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
