--- a/app/src/main/res/layout/fragment_voice_front.xml
+++ b/app/src/main/res/layout/fragment_voice_front.xml
@@ -35,10 +35,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
-            android:textSize="30sp"
             android:padding="10dp"
-            android:text="Tap mic and speak"
-            />
+            android:text="Tap mic and say the English definition"
+            android:textSize="20sp" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
